# RAG_ChatBot_App

./: .env  .gitignore  README.md  app.py  chatbot_plugin.php  dockerfile  frontend.html  indexer.py  llm_model.py  parser.py  pyproject.toml  requirements.txt  vector_store.py
mock_website/: index.html
tests/: test_app.py  test_llm_integrator.py  test_scraper_indexer.py
